[gd_scene load_steps=13 format=3 uid="uid://cvjfl1fdyg1s8"]

[ext_resource type="Script" uid="uid://e8skkwnda6rd" path="res://script/utility/state_machine.gd" id="1_taywt"]
[ext_resource type="Script" uid="uid://dnap51naoy01b" path="res://script/world_state/play.gd" id="2_f8p1x"]
[ext_resource type="PackedScene" uid="uid://cvjfl1fdyg1s8" path="res://scene/chapter/prologue.tscn" id="3_4p6bl"]
[ext_resource type="Script" uid="uid://b5glbdaoat85s" path="res://script/world_state/title.gd" id="3_w8sh0"]
[ext_resource type="Script" uid="uid://bfn0j37suh5n4" path="res://script/world_state/menu.gd" id="4_mt5sm"]
[ext_resource type="Script" uid="uid://bml3b570sx4km" path="res://script/world_state/weapon.gd" id="5_34ypy"]
[ext_resource type="Script" uid="uid://cl3ygoi1gg2m6" path="res://script/world_state/equipment.gd" id="6_j8tuv"]
[ext_resource type="Script" uid="uid://6x7e1qlhfkvc" path="res://script/world_state/item.gd" id="7_6l0gu"]
[ext_resource type="Script" uid="uid://cky3bfn4sucvs" path="res://script/world_state/stat.gd" id="8_4i51t"]
[ext_resource type="Script" uid="uid://byropmi65wr6l" path="res://script/world_state/option.gd" id="9_x1kp5"]
[ext_resource type="Script" uid="uid://dvtxld32ht7jt" path="res://script/world_state/exit.gd" id="10_lyifi"]
[ext_resource type="Script" uid="uid://bcfbck8tbdth0" path="res://script/world_state/menu_impl.gd" id="11_5m18y"]

[node name="world" type="Node2D"]

[node name="state_machine" type="Node2D" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("1_taywt")
initial_state = NodePath("menu")

[node name="play" type="Node" parent="state_machine" node_paths=PackedStringArray("next_state")]
script = ExtResource("2_f8p1x")
next_state = NodePath("../menu")

[node name="Prologue" parent="state_machine/play" instance=ExtResource("3_4p6bl")]

[node name="title" type="Node" parent="state_machine" node_paths=PackedStringArray("next_state")]
script = ExtResource("3_w8sh0")
next_state = NodePath("../play")

[node name="menu" type="Node" parent="state_machine" node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_mt5sm")
initial_state = NodePath("menu_impl")

[node name="weapon" type="Node" parent="state_machine/menu" node_paths=PackedStringArray("next_state")]
script = ExtResource("5_34ypy")
next_state = NodePath("../menu_impl")

[node name="equipment" type="Node" parent="state_machine/menu" node_paths=PackedStringArray("next_state")]
script = ExtResource("6_j8tuv")
next_state = NodePath("../menu_impl")

[node name="item" type="Node" parent="state_machine/menu" node_paths=PackedStringArray("next_state")]
script = ExtResource("7_6l0gu")
next_state = NodePath("../menu_impl")

[node name="stat" type="Node" parent="state_machine/menu" node_paths=PackedStringArray("next_state")]
script = ExtResource("8_4i51t")
next_state = NodePath("../menu_impl")

[node name="option" type="Node" parent="state_machine/menu" node_paths=PackedStringArray("next_state")]
script = ExtResource("9_x1kp5")
next_state = NodePath("../menu_impl")

[node name="exit" type="Node" parent="state_machine/menu" node_paths=PackedStringArray("next_state")]
script = ExtResource("10_lyifi")
next_state = NodePath("../../title")

[node name="menu_impl" type="Node" parent="state_machine/menu" node_paths=PackedStringArray("next_state")]
script = ExtResource("11_5m18y")
next_state = NodePath("../../play")

[node name="VBoxContainer" type="VBoxContainer" parent="state_machine/menu/menu_impl"]
offset_right = 40.0
offset_bottom = 40.0

[node name="weapon" type="Button" parent="state_machine/menu/menu_impl/VBoxContainer"]
layout_mode = 2
text = "weapon"
alignment = 0

[node name="equipment" type="Button" parent="state_machine/menu/menu_impl/VBoxContainer"]
layout_mode = 2
text = "equipment"
alignment = 0

[node name="item" type="Button" parent="state_machine/menu/menu_impl/VBoxContainer"]
layout_mode = 2
text = "item"
alignment = 0

[node name="stat" type="Button" parent="state_machine/menu/menu_impl/VBoxContainer"]
layout_mode = 2
text = "stat"
alignment = 0

[node name="save" type="Button" parent="state_machine/menu/menu_impl/VBoxContainer"]
layout_mode = 2
text = "save"
alignment = 0

[node name="option" type="Button" parent="state_machine/menu/menu_impl/VBoxContainer"]
layout_mode = 2
text = "option"
alignment = 0

[node name="exit" type="Button" parent="state_machine/menu/menu_impl/VBoxContainer"]
layout_mode = 2
text = "exit"
alignment = 0

[connection signal="pressed" from="state_machine/menu/menu_impl/VBoxContainer/weapon" to="state_machine/menu/menu_impl" method="_on_weapon_pressed"]
[connection signal="pressed" from="state_machine/menu/menu_impl/VBoxContainer/equipment" to="state_machine/menu/menu_impl" method="_on_equipment_pressed"]
[connection signal="pressed" from="state_machine/menu/menu_impl/VBoxContainer/item" to="state_machine/menu/menu_impl" method="_on_item_pressed"]
[connection signal="pressed" from="state_machine/menu/menu_impl/VBoxContainer/stat" to="state_machine" method="_on_stat_pressed"]
[connection signal="pressed" from="state_machine/menu/menu_impl/VBoxContainer/stat" to="state_machine/menu/menu_impl" method="_on_stat_pressed"]
[connection signal="pressed" from="state_machine/menu/menu_impl/VBoxContainer/save" to="state_machine/menu/menu_impl" method="_on_save_pressed"]
[connection signal="pressed" from="state_machine/menu/menu_impl/VBoxContainer/option" to="state_machine/menu/menu_impl" method="_on_option_pressed"]
[connection signal="pressed" from="state_machine/menu/menu_impl/VBoxContainer/exit" to="state_machine" method="_on_exit_pressed"]
[connection signal="pressed" from="state_machine/menu/menu_impl/VBoxContainer/exit" to="state_machine/menu/menu_impl" method="_on_exit_pressed"]
